# reviews_api

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/categories/: filters.py  handlers.py  schemas.py
core/api/v1/comments/: exceptions.py  handlers.py  schemas.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/genres/: filters.py  handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/api/v1/titles/: filters.py  handlers.py  schemas.py
core/api/v1/users/: filter.py  handlers.py  schemas.py
core/apps/common/: containers.py  elasticsearch.py  exceptions.py  permission_service.py
core/apps/customers/: admin.py  apps.py  entities.py  filters.py  models.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_token.py
core/apps/customers/services/: auth.py  codes.py  customers.py  sendors.py
core/apps/reviews/: admin.py  apps.py
core/apps/reviews/entities/: __init__.py  categories.py  comments.py  genres.py  reviews.py  titles.py
core/apps/reviews/exceptions/: category.py  comment.py  genre.py  reviews.py  title.py
core/project/: urls.py
core/project/settings/: main.py
nginx/: nginx.conf
tests/: conftest.py  test_category.py  test_comment.py  test_review.py  test_title.py
tests/factories/: __init__.py  author.py  category.py  comment.py  genre.py  review.py  title.py
(+30 files in other folders)
